added the recommendation section to the home page. Using Slid component instead of jquery. Removed everything replated to jquery. Linked the toggle component to make it translate the text into arabic/english and removed unused code

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -35,7 +35,15 @@
     "إرسال",
     "Send"
    ]
-  }
+  },
+  "arabic": [
+    "Arabic",
+    "العربية"
+   ],
+   "english": [
+	"English",
+    "الإنجليزية"
+   ]
  },
  "navBar": {
   "vehiclePart": [
@@ -927,7 +935,7 @@
     ]
    },
    "arabic": [
-    "عربى",
+    "العربية",
     "Arabic"
    ],
    "english": [
