hooked my react component with the new style. Getting the data now working from the server. Made the login into a popup

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -492,6 +492,10 @@
    "موصى به لك",
    "Recommended for you"
   ],
+  "subTitle": [
+    "مجموعة واسعة من العناصر لتختار من بينها",
+    "A wide selection of items for you to choose from"
+  ],
   "recommendation": {
    "bestSeller": [
     "الأكثر مبيعًا",
@@ -523,6 +527,12 @@
     "سيارتي",
     "My vehicle(s)"
    ]
+  },
+  "signin": {
+    "title": [
+      "مرحبا بعودتك",
+      "Welcome Back"
+    ]
   },
   "updateEmail": {
    "title": [
