done with the mobile view

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -582,8 +582,8 @@
         "Add a vehicle"
       ],
       "subTitle": [
-        ".تخزين المركبات في المرآب الخاص بك والحصول على توصيات المنتج",
-        "Store vehicles in your garage and Get product recommendations."
+        "تخزين المركبات في المرآب الخاص بك والحصول على توصيات المنتج",
+        "Store vehicles in your garage and Get product recommendations"
       ]
     },
     "signin": {
