fixed order summrary style. Preped search page for Fareed

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -1220,7 +1220,7 @@
     ],
     "checkout": [
       "الدفع",
-      "Checkout now"
+      "Checkout"
     ],
     "placeOrder": [
       "ضع طلبك",
