Addresses (addresses ,no addresses, add Address)

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -439,6 +439,14 @@
         "deliver": [
           "التوصيل لهذا العنوان",
           "Deliver to this address"
+        ],
+        "country": [
+          "دولة",
+          "Country"
+        ],
+        "selectAddress": [
+          "حدد عنوانك من خلال الخريطة",
+          "Select your address by google mabs"
         ]
       }
     },
