--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -448,6 +448,26 @@
       "selectAddress": [
         "حدد عنوانك من خلال الخريطة",
         "Select your address by google mabs"
+      ],
+      "firstName": [
+        "الاسم الاول",
+        "First Name"
+      ],
+      "lastName": [
+        "الاسم الاخير",
+        "Last Name"
+      ],
+      "alternatePhone": [
+        "رقم هاتف بديل",
+        "Alternate Phone Number"
+      ],
+      "phoneNumber": [
+        "رقم الهاتف",
+        "Phone Number"
+      ],
+      "shippingNote": [
+        "ملاحظة الشحن",
+        "Shipping note"
       ]
     },
     "vendor": {
@@ -1048,6 +1068,26 @@
       "add": [
         "اضف عنوان",
         "Add address"
+      ],
+      "noAddress": [
+        "لا يوجد عنوان",
+        "NO SAVED ADDRESS"
+      ],
+      "shippingItem": [
+        "اين تريد ان يتم شحن اغراض؟",
+        "Where you would like your items shipped?"
+      ],
+      "defaultAddress": [
+        "عنوان افتراضي",
+        "Default Addresses"
+      ],
+      "edit": [
+        "تعديل",
+        "edit"
+      ],
+      "delete": [
+        "حذف",
+        "Delete"
       ]
     },
     "order": {
