finished additional style

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -786,6 +786,18 @@
     }
   },
   "setting": {
+    "signout":[
+      "تسجيل خروج",
+      "Sign Out"
+    ],
+    "vehicle": [
+      "مركبة",
+      "Vehicle"
+    ],
+    "request": [
+      "طلبات",
+      "Requests"
+    ],
     "links": {
       "quotations": [
         "الاقتباسات",
