--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -1841,7 +1841,7 @@
       ],
       "add": [
         "أضف قطعة أخرى",
-        "+Add Another Part"
+        "Add Another Part"
       ],
       "delete": [
         "حذف",
