Make sure to select the data before moving to the next page and fixed some things in style

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -1573,6 +1573,10 @@
     "vat": [
       "ضريبة الشراء",
       "Vat"
+    ],
+    "grandTotal": [
+      "المجموع الكلي",
+      "Grand Total"
     ]
   },
   "checkout": {
