sending the new data and handling if the customer is not logged in

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -959,7 +959,11 @@
         "أضف مدينة الشحن",
         "Add shipping city"
       ]
-    }
+    },
+    "continue": [
+      "استمر",
+      "Continue"
+    ]
   },
   "shippingCity": {
     "placeholder": {
