work on the checkout payment(used the real data)

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -1710,9 +1710,13 @@
           "رقم حساب",
           "Account number"
         ],
-        "code": [
-          "رقم التحويل المالي",
-          "SWIFT code"
+        "iban": [
+          "رقم الحساب المصرفي الدولي",
+          "iban"
+        ],
+        "owner": [
+          "المالك",
+          "owner"
         ],
         "transferText": [
           "قم بالدفع مباشرة في حسابك . يرجى استخدام معرّف الطلب الخاص بك كمرجع للدفع. لا يمكن شحن طلبك حتى يتم مسح الأموال في حسابك",
