finished the checkout procedure

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -71,6 +71,10 @@
     "subtotal": [
       "حاصل الجمع",
       "Subtotal"
+    ],
+    "thankYou": [
+      "شكرا جزيلا !",
+      "Thank you !"
     ]
   },
   "tyresPage": {
